objects/autorabit__Entity_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>autorabit__Data_Direction__c</fullName>
        <label>Data Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autorabit__Field_Mapping_JSON__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Field Mapping JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__ISV_Entity__c</fullName>
        <label>ISV Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autorabit__Picklist_Value_Mapping_JSON__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Picklist Value Mapping JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__SF_Identifier_Field__c</fullName>
        <label>SF Identifier Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__SF_Identifier_Value__c</fullName>
        <label>SF Identifier Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__SF_Object__c</fullName>
        <label>SF Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__Static_Value_Mapping_JSON__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Static Value Mapping JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Entity Mapping</label>
    <nameField>
        <displayFormat>Mapping-{0000}</displayFormat>
        <label>Entity Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>